--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -46,15 +46,18 @@ only_rules:
   - explicit_init
   - fallthrough
   - fatal_error_message
+  - final_test_case
   - first_where
   - flatmap_over_map_reduce
   - for_where
+  - function_name_whitespace
   - generic_type_name
   - ibinspectable_in_extension
   - identical_operands
   - identifier_name
   - implicit_getter
   - implicit_return
+  - implicit_optional_initialization
   - inclusive_language
   - invalid_swiftlint_command
   - is_disjoint
@@ -72,6 +75,8 @@ only_rules:
   - lower_acl_than_parent
   - mark
   - modifier_order
+  - multiline_arguments
+  - multiline_arguments_brackets
   - multiline_function_chains
   - multiline_literal_brackets
   - multiline_parameters
@@ -80,15 +85,17 @@ only_rules:
   - no_extension_access_modifier
   - no_fallthrough_only
   - no_space_in_method_call
+  - non_optional_string_data_conversion
   - non_overridable_class_declaration
   - notification_center_detachment
   - ns_number_init_as_function_reference
   - nsobject_prefer_isequal
   - number_separator
-  - opening_brace
   - operator_usage_whitespace
-  - operator_whitespace
+  - optional_data_string_conversion
   - overridden_super_call
+  - prefer_condition_list
+  - prefer_key_path
   - prefer_self_in_static_references
   - prefer_self_type_over_type_of_self
   - prefer_zero_over_explicit_init
@@ -104,7 +111,7 @@ only_rules:
   - redundant_discardable_let
   - redundant_nil_coalescing
   - redundant_objc_attribute
-  - redundant_optional_initialization
+  - redundant_sendable
   - redundant_set_access_control
   - redundant_string_enum_value
   - redundant_type_annotation
@@ -119,6 +126,7 @@ only_rules:
   - sorted_first_last
   - statement_position
   - static_operator
+  - static_over_final_class
   - strong_iboutlet
   - superfluous_disable_command
   - superfluous_else
@@ -146,6 +154,7 @@ only_rules:
   - unused_setter_value
   - valid_ibinspectable
   - vertical_parameter_alignment
+  - vertical_parameter_alignment_on_call
   - vertical_whitespace_closing_braces
   - vertical_whitespace_opening_braces
   - void_function_in_ternary
@@ -155,9 +164,12 @@ only_rules:
   - yoda_condition
 analyzer_rules:
   - capture_variable
+  - typesafe_array_init
+  - unneeded_synthesized_initializer
   - unused_declaration
   - unused_import
-  - typesafe_array_init
+redundant_discardable_let:
+  ignore_swiftui_view_bodies: true
 for_where:
   allow_for_as_filter: true
 number_separator:
@@ -182,6 +194,10 @@ identifier_name:
     - 'y1'
     - 'y2'
     - 'z2'
+redundant_type_annotation:
+  consider_default_literal_types_redundant: true
+unneeded_override:
+  affect_initializers: true
 custom_rules:
   no_nsrect:
     regex: '\bNSRect\b'
@@ -204,10 +220,16 @@ custom_rules:
     message: 'Use Double instead of CGFloat'
   swiftui_state_private:
     regex: '@(ObservedObject|EnvironmentObject)\s+var'
-    message: 'SwiftUI @ObservedObject/@EnvironmentObject properties should be private'
+    message: 'SwiftUI @ObservedObject and @EnvironmentObject properties should be private'
   swiftui_environment_private:
     regex: '@Environment\(\\\.\w+\)\s+var'
     message: 'SwiftUI @Environment properties should be private'
+  swiftui_scaledtofit:
+    regex: 'aspectRatio\(contentMode: \.fit\)'
+    message: 'Prefer `scaledToFit()`'
+  swiftui_scaledtofill:
+      regex: 'aspectRatio\(contentMode: \.fill\)'
+      message: 'Prefer `scaledToFill()`'
   final_class:
     regex: '^class [a-zA-Z\d]+[^{]+\{'
     message: 'Classes should be marked as final whenever possible. If you actually need it to be subclassable, just add `// swiftlint:disable:next final_class`.'
